tdf#136133: AppendInfoBar can return null

2 cases:
1) When set Donate property to false value in /org.openoffice.Office.UI.Infobar/Enabled
 and LastTimeDonateShow with 1 in /org.openoffice.Setup/Product (Expert Configuration)
See https://bugs.documentfoundation.org/attachment.cgi?id=164702

2) GetInvolved = false and LastTimeGetInvolved = 1
See https://bugs.documentfoundation.org/attachment.cgi?id=164703

(cherry picked from commit be4fcac736fccce8ee7d4550a860b0127e7601bb)

Change-Id: I2da22616fb6f3fb4e42bf6b5e5c29cc094dc2fd6